--- a/R/dataRAM.Rmd
+++ b/R/dataRAM.Rmd
@@ -68,12 +68,7 @@ source('~/Desktop/flr/kobe/R/fao-phase.R')
 load(file.path(dirDat,"DBdata.RData"))
 stockid=stock
 names(stockid)[3]="species" 
-
-## Fishbase
-load(file.path(dirDat,"fb.RData"))
-
-## FAO Taxa
-load(file.path(dirDat,"fao_taxa.RData"))
+save(stockid,file=file.path(dirDat,"stockid.RData"))
 ```
 
 ```{r, key}
@@ -291,120 +286,10 @@ save(ts,file=file.path(dirDat,"ts.RData"))
 ```
 
 
-```{r, indices}
-area=read.csv("~/Desktop/projects/fao/VoI/Report/FAO-VoI/inputs/depletionbyarea.csv")
-names(stockid)[9]="area"
-area=merge(subset(stockid,stockid%in%unique(ts$stockid))[,c("stockid","area")],area)[,c("stockid","area","expected","cv")]
-
-eff=read.csv("/home/laurence-kell/Desktop/projects/fao/VoI/Report/FAO-VoI/inputs/MappedFAO.csv")
-eff=ddply(subset(eff,FAO%in%unique(area$area)),.(FAO,Year), with, data.frame(effort=sum(EffortCellReportedNom)))
-names(eff)=c("area","year","effort")
-
-sar=read.csv(file.path(dirInp,"sardata.csv"))[,-1]
-
-fmi=read.csv(file.path(dirInp,"fmidata.csv"))
-
-save(sid,assessment,stockid,area,eff,sar,fmi,file=file.path(dirRes,"faoIndices.RData")) 
-```
-
-```{r, tRFMO}
-getPath <- function(file) {
-  if (!grepl(.Platform$file.sep,file))
-    res <- getwd()
-  else
-    res <- substr(file,1,max(gregexpr(.Platform$file.sep,file)[[1]])-1)
-  return(res)}
-
-getFile<-function(file) {
-  res <- substr(file,max(gregexpr(.Platform$file.sep,file)[[1]])+1,
-                nchar(file))
-  return(res)}
-
-getRAM<-function(x){
-  rf =getRf(x)
-  sp =spFunc(x)[-1,]
-  res=transform(sp,stock=ssb/rf[1,"ssbmsy"])
-  res=cbind(res,"harvest"=x$Kobe[seq(dim(res)[1]),3])
-  res}
-
-dirAss="/home/laurence-kell/Dropbox/jabba_laurie/jabba_assessments"
-dir   =system2("ls",args=dirAss,stdout=TRUE)
-dir=dir[dir.exists(file.path(dirAss,dir))]
-dir=dir[file.exists(file.path(dirAss,dir,"lkout.rdata"))]
-
-jb=mdply(dir,function(x) {
-     load(file.path(dirAss,x,"lkout.rdata"))
-     cbind(assessid=x,lkout)})[,-1]
-
-jb$assessid=jb$stockid
-
-ss=data.frame(
-file=c(file.path(c("/home/laurence-kell/Dropbox/xval/io-bet",
-                   "/home/laurence-kell/Dropbox/xval/io-yft",
-                   "/home/laurence-kell/Dropbox/xval/epo-bet",
-                   "/home/laurence-kell/Dropbox/xval/epo-yft",
-                   "/home/laurence-kell/Dropbox/xval/iccat-bet",
-                   "/home/laurence-kell/Dropbox/xval/iccat-yft"),"base"),
-  file.path("/home/laurence-kell/Desktop/rfmo/iccat/sc-eco/2020/inputs/ss",c("sma/2019/run1",
-                                                                             "bum/2018",
-                                                                             "whm/2019/run6",
-                                                                             "swon/2017/run1"))),
-assessid=c("io-bet","io-yft","epo-bet","epo-yft","iccat-bet","iccat-yft","iccat-sma","iccat-bum","iccat-whm","iccat-swo"),
-species=c("Thunnus obesus","Thunnus albacares",
-          "Thunnus obesus","Thunnus albacares",
-          "Thunnus obesus","Thunnus albacares",
-          "Isurus oxyrinchus",
-          "Makaira nigricans",
-          "Kajikia albida",
-          "Xiphias gladius"))
-dat=ldply(dlply(ss,.(assessid,species), with, getSS(file)),getTs)
-
-dt1=ddply(transform(cbind(subset(dat,assessid%in%ss[1:4,2]),qrtr=1:4),year=year-qrtr),.(assessid,species,year), with, 
-             data.frame(year=(year[1]+3)/4,stock=stock[1],harvest=harvest[1],biomass=biomass[1],ssb=ssb[1],catch=sum(catch)))
-ss=rbind.fill(dt1,subset(dat,!assessid%in%unique(dt1$assessid)))
-trfmo=rbind.fill(ss,jb)
-#trfmo=rbind(ddply(subset(trfmo,year<1000),.(assessid),transform, year=year+2018-max(year)),
-#            subset(trfmo,year>1000))
-
-nms=data.frame(
-assessid=c("iccat-bet","epo-bet","io-bet",
-           "iccat-yft","epo-yft","io-yft",
-           "albsatl_iccat",
-           "iccat-swo","swo_iotc","swo_natl","swo_satl","swomed_iccat",
-           "iccat-bum","bum_iccat","bum_iotc",
-           "iccat-whm","whm_iccat",
-           "mls_iotc",
-           "skj_iotc",
-           "smanatl_iccat","iccat-sma",
-           "bsh_iotc"),
-species=c("Thunnus obesus","Thunnus obesus","Thunnus obesus",
-          "Thunnus albacares","Thunnus albacares","Thunnus albacares",
-          "Thunnus alalunga",
-          "Xiphias gladius","Xiphias gladius","Xiphias gladius","Xiphias gladius","Xiphias gladius",
-          "Makaira nigricans","Makaira nigricans","Makaira nigricans",
-          "Kajikia albida","Kajikia albida",
-          "Kajikia audax",
-          "Katsuwonus pelamis",
-          "Isurus oxyrinchus","Isurus oxyrinchus",
-          "Prionace glauca"))
-trfmo=rbind.fill(transform(ss,stockid=paste(assessid,"ss",sep="-")),
-                 transform(jb,stockid=paste(assessid,"jabba",sep="-")))
-trfmo=merge(trfmo[,-2],nms,by="assessid")
-trfmo=ddply(trfmo,.(assessid), transform, year=year+ifelse(max(year),2018-max(year),0))
-  
-ggplot(trfmo)+
-  geom_line(aes(year,stock))+
-  facet_wrap(~assessid,scale="free")+
-  theme_bw()+
-  xlab("Year")+ylab(expression(B:B[MSY]))
-
-save(trfmo,file=file.path(dirDat,"trfmo.RData"))
-```
-
 
 ```{r}
-load("file.path(dirDat,/ts.RData")
-load(file.path(dirRes,"trfmo.RData"))
+load(file.path(dirDat,"ts.RData"))
+load(file.path(dirDat,"trfmo.RData"))
 
 ts=rbind.fill(cbind("what"="RAM",merge(ts,stockid[,c("stockid","species")])),
               cbind("what"="RFMO",trfmo))[,c("what","assessid","species","year","stock","catch","harvest")]
@@ -550,47 +435,3 @@ ggpairs(transmute(msy,r=r,shape=bmsy/K))+theme_bw()
 ```
 
 **Figure `r iFig=iFig+1; iFig`** Relationship between population growth rate ($r$) and the ratio of $B_{MSY}:K$ (shape) based on selected data rich assessments.
-
-```{r, pd}
-load(file.path(dirRes,"lh.RData"))
-
-lh$a[is.na(lh$a)]=0.002
-lh$b[is.na(lh$b)]=3.0
-
-pd=mydas:::popdyn(lhPar(as(lh[,c("linf","k","t0","a","b","l50")],"FLPar")))
-dimnames(pd)$iter=lh$species
-
-lh.low=lhPar(as(lh[,c("linf","k","t0","a","b","l50")],"FLPar"))
-
-lh.low["m1"]=0.45
-lh.low[ "s"]=0.8
-
-pd.low=mydas:::popdyn(lhPar(lh.low))
-dimnames(pd.low)$iter=lh$species
-
-save(pd,pd.low,file=file.path(dirRes,"pd.RData"))  
-```
-
-```{r}
-cpue  =subset(timeseries,assessid%in%unique(ts$assessid)) #&substr(tsid,1,4)=="cpue")
-survey=subset(timeseries,assessid%in%unique(ts$assessid)&substr(tsid,1,4)=="surv")
-```
-
-```{r}
-cpue =subset(timeseries_assessments_views,stockid%in%unique(ts$stockid)&!is.na(CPUE) )$CPUE
-survB=subset(timeseries_assessments_views,stockid%in%unique(ts$stockid)&!is.na(survB))$survB
-```
-
-```{r}
-taxa=merge(fao_taxa[[1]],fao_taxa[[2]])
-```
-
-```{r}
-load("/home/laurence-kell/Dropbox/FAO-VoI/data/DBdata.RData")
-load("/home/laurence-kell/Dropbox/FAO-VoI/data/ts.RData")
-
-msy=transmute(subset(timeseries,tsid%in%"CdivMSY-ratio"&assessid%in%unique(ts$assessid)),year=tsyear,series=tsvalue,scenario=assessid)
-
-save(msy,file=file.path(dirDat,"msy.RData"))
-```
-
